# bft-raft

./: .gitignore  .gitmodules  CMakeLists.txt  whitelist.json
auth-service/: CMakeLists.txt  main.cpp
src/: bft_state_machine.cpp  bft_state_machine.hpp  main.cpp  request_handler.cpp  request_handler.hpp
test/: CMakeLists.txt  simple_client.cpp
